# andromeda-trust-lib

./: .gitignore  PyTorchSklearnWrapper.py  README.md  UniversarSklearnWrapper.py  actualizar_modelo.py  convert_SVM.py  emissions.csv  factsheet.json  factsheet2.json  factsheet_actual.json  main.ipynb  main.py  model_generator.ipynb  model_tree.pkl  modelo_corazon_real.pth  orignales.txt  pyproject.toml  requirements.txt  requirements_base.txt  trust_evaluation_fashionmnist.json  trust_evaluation_result.json  ver.json  ver_json.json
models_and_data/: biased_test.csv  biased_train.csv  california_housing_test.csv  california_housing_train.csv  explainability_test.csv  explainability_train.csv  factsheet_cybersecurity.json  factsheet_regression.json  fair_test.csv  fair_train.csv  model_SVM.pkl  model_biased.pkl  model_cybersecurity.pkl  model_explainable.pkl  model_fair.pkl  model_generator.ipynb  model_multiclass.pkl  model_multiclass_full.pkl  model_nn.pth  model_non_explainable.pkl  model_non_private.pkl  model_non_robust.pkl  model_private.pkl  model_regression.pkl  model_robust.pkl  model_tree.pkl  model_tree_normalized.pkl  modelo_corazon_real.pth  modelo_heart.pth  multiclass_test.csv  multiclass_train.csv  privacy_nonprivate_test.csv  privacy_nonprivate_train.csv  privacy_private_test.csv  privacy_private_train.csv  robustness_test.csv  robustness_train.csv  test_multiclass.csv  test_normalized.csv  test_regression.csv  (+8 more)
notebooks/: binary_fairness_smoke.ipynb  multiclass_fairness_smoke.ipynb
scripts/: README.md  build-package.sh
trust_library/: accountability.py  base_metric.py  configs.json  core.py  factsheet.json  fairness.py  pillar.py  privacy.py  robustness.py  sustainability.py  utils.py
(+46 files in other folders)
