[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "andromeda-trust-lib"
version = "0.1.0"
description = "Trust evaluation framework for ML systems"
readme = "README.md"
requires-python = ">=3.9"

authors = [
    { name = "Aaron Palomar Peña", email = "aaronpalpe@yahoo.es" },
    { name = "Antonio Marín Ortega", email = "antonio.marino@um.es" },
]

license = { file = "LICENSE" }

dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.2",
    "scipy>=1.10",
    "holisticai>=1.0",
    "codecarbon>=3.0",
    "adversarial-robustness-toolbox>=1.15",
    "shap>=0.40",
    "lime>=0.2",
    "plotly>=5.0",
    "seaborn>=0.12",
    "nbformat>=4.2.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"trust_library" = ["configs.json"]